<resources>
    <string name="app_name">Fighting Timer</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="pause_button">Pause</string>
    <string name="countdown_label">Countdown</string>
    <string name="resume_button">Resume</string>
    <string name="round_label">Round</string>
    <string name="break_label">Break</string>
    <string name="timer">Timer</string>
    <string name="presets">Presets</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="remove_preset_question">Remove preset?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="round_time_dialog">Round time</string>
    <string name="break_time_dialog">Break time</string>
    <string name="preset_name_dialog">Preset name</string>
    <string name="field_cannot_be_empty">This field cannot be empty!</string>
    <string name="add_preset_to_use_timer">Add preset first to use timer!</string>
    <string name="value_zero">This value cannot be 0!</string>
</resources>
